slideshow caption set to display fixed to position under photo. Arrows moved to divs for images to align with the photo vertically at 50% instead of being misaligned since caption text was moved.

--- a/styles.css
+++ b/styles.css
@@ -650,7 +650,7 @@ video.wide-video {
 .slideshow-container {
   max-width: 1000px;
   position: relative;
-  margin: auto 16px;
+  margin: 0 16px;
 }
 
 /* Next & previous buttons */
@@ -679,19 +679,23 @@ video.wide-video {
 }
 
 /* Caption text */
+
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+	font-family: Avenir, Roboto, Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	letter-spacing: 0.01em;
+	line-height: 24px;
+	color: #000000;
+	opacity: 0.54;
+	font-weight: 400;
+	width: 100%;
+	margin: 8px auto;
+	text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #FFFFFF;
+  color: rgba(255, 255, 255, 0.7);
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -701,8 +705,8 @@ video.wide-video {
 /* The dots/bullets/indicators */
 .dot {
   cursor:pointer;
-  height: 13px;
-  width: 13px;
+  height: 10px;
+  width: 10px;
   margin: 0 2px;
   background-color: #bbb;
   border-radius: 50%;
@@ -711,7 +715,7 @@ video.wide-video {
 }
 
 .dot.active, .dot:hover {
-  background-color: #7bbed1;
+  background-color: #006784;
 }
 
 a.prev, a.next {
@@ -822,6 +826,9 @@ a.prev, a.next {
 		line-height: 24px;
 		margin-bottom: 24px;
 	}
+	.text {
+		font-size: 14px;
+	}
 	.mdl-layout p {
 		font-size: 16px;
 		line-height: 24px;
@@ -840,6 +847,9 @@ a.prev, a.next {
 	}
 	.case-study img, .background-photo-maintain-height, .background-photo-portfolio-view-maintain-height, .background-photo-scalable, .background-photo-tall  {
 		margin-bottom: 8px;
+	}
+	.mdl-layout .bottom-spacer {
+		margin-bottom: 24px;
 	}
 }
 	
